package com.apet2929.engine.model;

public class Texture {
    private final int id;

    public Texture(int id) {
        this.id = id;
    }

    public int getId() {
        return id;
    }
}
