package com.apet2929.game.particles.gas;

import com.apet2929.game.particles.ParticleType;

public class Smoke extends Gas{
    public Smoke(int x, int y) {
        super(x, y, ParticleType.SMOKE);
    }
}
